--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
                 <button onclick="startCategory('spelling')" class="category-btn">
                     <span class="category-icon">✍️</span>
-                    Yazım
+                    Doğru Yazılışı
                 </button>
                 <button onclick="startCategory('speaking')" class="category-btn">
                     <span class="category-icon">🗣️</span>
